--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
@@ -17,7 +18,7 @@
 <body>
 
   <section>
-    
+
     <div  class="code">
       <img src="images/image-qr-code.png" alt="QR Code">
     </div>
@@ -32,7 +33,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Victório Caratta</a>.
+      Coded by <a href="https://github.com/victoriocaratta/Challenge-QR-code-component">Victório Caratta</a>.
     </div>
   </footer>
 </body>
